--- a/ss02/views/post-form.html
+++ b/ss02/views/post-form.html
@@ -9,7 +9,9 @@
     <form action="" method="POST">
       <input type="text" name="id" placeholder="id" />
 
-      <input type="text" name="q" placeholder="content" />
+      <input type="text" name="name" placeholder="name" />
+      <input type="text" name="class" placeholder="class" />
+      <input type="text" name="age" placeholder="age" />
       <button type="submit">Search</button>
     </form>
   </body>
